Fix FAQ chevron clipping

--- a/_sass/world/modules/_faq.scss
+++ b/_sass/world/modules/_faq.scss
@@ -61,11 +61,11 @@
             justify-content: space-between;
             align-items: center;
             flex-direction: row;
-            min-height: 2em;
 
             svg {
               flex: 0 0 auto;
               height: calc(1em + 0.5vw);
+              min-height: 30px;
               width: auto;
               margin-left: var(--space-small);
               transition: transform 0.2s linear;
